--- a/BigIntegersBase/BigIntegersBase.vcxproj
+++ b/BigIntegersBase/BigIntegersBase.vcxproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup Label="ProjectConfigurations">
     <ProjectConfiguration Include="Debug|Win32">
@@ -166,9 +166,6 @@
     <ClCompile Include="..\BigIntegers\Timer.cpp" />
     <ClCompile Include="CFixedPowerModularArithmeticBox.cpp" />
     <ClCompile Include="CBigIntegerHelper.cpp" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include=".gitignore" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
